src/components/organisms/Links/Links.scss
@import 'src/styles/mixins/media';

.links {
  padding: 100px 87px;

  background: $black;
  background-image: url(../../../assets/img/sections/home/links.svg);
  background-repeat: no-repeat;
  background-position: center 0;
  background-size: 103.7% auto;
  @include b('tablet') {
    padding: 40px 0 40px;

    background-image: unset;
  }

  .row {
    display: flex;
    justify-content: space-between;
    @include b('tablet') {
      padding: 0;

      flex-direction: column;
      align-items: center;
    }
  }

  &__title {
    max-width: 270px;
    height: 45px;

    @include b('tablet') {
      max-width: 350px;
      height: auto;
    }
  }

  &__link {
    padding: 69px 0 53px;
    @include b('tablet') {
      padding: 0;
    }
  }
}

.link {
  &__subscribe {
    &__social-networks {
      margin-top: 48px;

      display: flex;
      justify-content: space-around;

      max-width: 170px;
      flex-wrap: wrap;
      @include b('tablet') {
        margin-top: 20px;
        padding-bottom: 20px;

        justify-content: space-between;

        width: 100%;
        max-width: 290px;
      }
    }

    &__network {
      margin-bottom: 15px;

      width: 75px;
      height: 75px;

      background-color: transparent;

      border: 3px solid $green;

      @include b('tablet') {
        &:not(:last-child) {
          margin-right: 20px;
        }
      }
    }
  }

  &__subscribe-email {
    padding-right: 47px;
    padding-left: 47px;

    display: flex;
    flex-direction: column;
    align-items: center;

    border-left: 1px dashed $white-d;
    border-right: 1px dashed $white-d;
    @include b('tablet') {
      padding: 20px 0;

      width: 100%;

      border-top: 1px dashed $white-d;
      border-left: unset;
      border-right: unset;
      border-bottom: 1px dashed $white-d;
    }

    &__e-mail {
      margin: 47px 0 23px;

      @include b('tablet') {
        margin: 20px 0;

        .box-shadow {
          box-shadow: initial;
          filter: drop-shadow(0 30px 40px rgba(109, 218, 192, 0.1));
        }
      }
    }

    &__submit-btn {
      margin: 0 auto;
    }
  }

  &__chat {
    @include b('tablet') {
      margin: 33px 0 0;

      .box-shadow {
        box-shadow: initial;
        filter: drop-shadow(0 30px 40px rgba(109, 218, 192, 0.1));
      }
    }

    &-tg {
      margin: 32px auto 0;

      width: 102px;
      height: 102px;

      background-color: transparent;

      border: 3px solid $green;
      @include b('tablet') {
        margin-top: 20px;

        width: 76px;
        height: 76px;
      }
    }
  }
}

